--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Professional level nodejs project.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "nodejs",
@@ -21,6 +21,8 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2"
   }
 }
