--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 CORS_ORIGIN=*
+ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_SECRET=12345
+REFRESH_TOKEN_EXPIRY=30d
+REFRESH_TOKEN_SECRET=12345
 MONGODB_URI=mongodb+srv://shuvabiswas12:yout-password@cluster0.udfba8c.mongodb.net
