--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,11 @@
 PORT=8000
 CORS_ORIGIN=*
 ACCESS_TOKEN_EXPIRY=1d
-ACCESS_TOKEN_SECRET=12345
+ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=30d
-REFRESH_TOKEN_SECRET=12345
+REFRESH_TOKEN_SECRET=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_CLOUD_NAME=
+
 MONGODB_URI=mongodb+srv://shuvabiswas12:yout-password@cluster0.udfba8c.mongodb.net
